force-app/main/default/objects/Incentive__c/Incentive__c.object-meta.xml
<CustomObject>
    <label>Incentive</label>
    <nameField>
        <label>Incentive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>