force-app/main/default/objects/Incentive__c/fields/Incentive_Eligibility_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Eligibility_Percentage__c</fullName>
    <label>Incentive Eligibility Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>