force-app/main/default/objects/Incentive__c/fields/Incentive_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Incentive_End_Date__c</fullName>
    <label>Incentive End Date</label>
    <type>Date</type>
</CustomField>