force-app/main/default/objects/Incentive__c/fields/Incentive_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Start_Date__c</fullName>
    <label>Incentive Start Date</label>
    <type>Date</type>
</CustomField>